[package]
name                                    =   "http-async"
description                             =   "Simple Server, who speaks the Hyper Text Transfer Protocol, with async-std."
version                                 =   "0.1.1"
authors                                 =   [
                                              "Sebastian Walz <sivizius@ohai.su>",
                                            ]
edition                                 =   "2018"
license                                 =   "MIT"
repository                              =   "https://github.com/sivizius/http-async"
documentation                           =   "https://docs.rs/http-async/"

[dependencies]
async-std                               =   "1.4"

[lib]
path                                    =   "source/lib.rs"
